finished linking back and forth - going to members and subjects paths without any params does not break

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,9 +1,11 @@
 <h2>Concepts</h2>
 
 <ul>
-	<% @subjects.each do |s| %>
+	<% @subjects.each do |subject| %>
 		<li>
-			<%= s.label %>
+			<%= link_to subject_members_path(subject.id) do %>
+				<%= subject.label %>
+			<% end %>
 		</li>
 	<% end %>
 </ul>
