--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,11 +1,14 @@
-<h2>Concepts</h2>
+<h1>Home</h1>
 
 <ul>
-	<% @subjects.each do |subject| %>
-		<li>
-			<%= link_to subject_members_path(subject.id) do %>
-				<%= subject.label %>
-			<% end %>
-		</li>
-	<% end %>
+	<li>
+		<%= link_to subjects_path do %>
+			Subjects
+		<% end %>
+	</li>
+	<li>
+		<%= link_to members_path do %>
+			Members
+		<% end %>
+	</li>
 </ul>
