changed the naming of everything to match the data types

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -2,13 +2,13 @@
 
 <ul>
 	<li>
-		<%= link_to subjects_path do %>
-			Subjects
+		<%= link_to concepts_path do %>
+			Concepts
 		<% end %>
 	</li>
 	<li>
-		<%= link_to members_path do %>
-			Members
+		<%= link_to people_path do %>
+			People
 		<% end %>
 	</li>
 </ul>
