ordered all the things

--- a/app/views/concepts/show.html.erb
+++ b/app/views/concepts/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @concept.label %></h1>
-<h2>Members that have tabled questions with this subject</h2>
+<h2>Members that have tabled questions with this subject ordered by the numbers of questions they have asked</h2>
 <ul>
 	<% @tabling_members.each do |person| %>
 		<li>
