experimented with displaying the count of questions and changed headlines"

--- a/app/views/concepts/index.html.erb
+++ b/app/views/concepts/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Most popular concepts</h1>
+<h2>Concepts ordered by the number of questions tabled around them</h2>
 
 <ul>
 	<% @concepts.each do |concept| %>
