finished oral question model

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -2,6 +2,11 @@
 
 <ul>
 	<li>
+		<%= link_to houses_path do %>
+			Houses
+		<% end %>
+	</li>
+	<li>
 		<%= link_to concepts_path do %>
 			Concepts
 		<% end %>
