--- a/app/views/concepts/index.html.erb
+++ b/app/views/concepts/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Most popular concepts</h1>
-<h2>Concepts ordered by the number of questions tabled around them</h2>
+<h2>TODO order by the sum of total or average contributions per concept</h2>
 
 <ul>
 	<% @concepts.each do |concept| %>
