--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -3,7 +3,7 @@
 <ul>
 	<% @houses.each do |house| %>
 		<li>
-			<%= link_to house_path(concept.id) do %>
+			<%= link_to house_path(house.id) do %>
 				<%= house.label %>
 			<% end %>
 		</li>
