added oral questions and written questions to index

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -12,6 +12,16 @@
 		<% end %>
 	</li>
 	<li>
+		<%= link_to oral_questions_path do %>
+			Oral Questions
+		<% end %>
+	</li>
+	<li>
+		<%= link_to written_questions_path do %>
+			Written Questions
+		<% end %>
+	</li>
+	<li>
 		<%= link_to people_path do %>
 			People
 		<% end %>
