finished main index page and index pages for each node

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -22,6 +22,11 @@
 		<% end %>
 	</li>
 	<li>
+		<%= link_to divisions_path do %>
+			Divisions
+		<% end %>
+	</li>
+	<li>
 		<%= link_to people_path do %>
 			People
 		<% end %>
