--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -26,7 +26,9 @@
 	<% end %>
 </ul>
 
-<h2>Divisions by <%= @house.label %></h2>
+<%= link_to house_divisions_path(@house.id) do %>
+	<h2>Divisions by <%= @house.label %></h2>
+<% end %>
 <ul>
 	<% @divisions_by_house.each do |division| %>
 		<li>
