--- a/app/views/concepts/index.html.erb
+++ b/app/views/concepts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Most popular concepts</h1>
+<h1>Concepts</h1>
 <h2>TODO order by the sum of total or average contributions per concept</h2>
 
 <ul>
