--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -1,13 +1,13 @@
 <h1><%= @house.label %></h1>
 
 <%= link_to house_oral_questions_path(@house.id) do %>
-	<h2>Oral questions by <%= @house.label %></h2>
+	<h2><%= @house.label %> oral questions</h2>
 <% end %>
 
 <%= link_to house_written_questions_path(@house.id) do %>
-	<h2>Written questions by <%= @house.label %></h2>
+	<h2><%= @house.label %> written questions</h2>
 <% end %>
 
 <%= link_to house_divisions_path(@house.id) do %>
-	<h2>Divisions by <%= @house.label %></h2>
+	<h2><%= @house.label %> divisions</h2>
 <% end %>
