--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Most active people based on how many questions they ask</h1>
+<h1>Most active people based on the number of total contributions</h1>
 <ul>
 	<% @people.each do |person| %>
 		<li>
