--- a/app/views/written_questions/show.html.erb
+++ b/app/views/written_questions/show.html.erb
@@ -1,9 +1,15 @@
 <h1>Written question details</h1>
 <dl>
 	<dt>House</dt>
-	<dd><%= @written_question.house.label %></dd>
+	<dd><%= link_to house_path(@written_question.house.id) do %>
+			<%= @written_question.house.label %>
+		<% end %>
+	</dd>
 	<dt>Asked by</dt>
-	<dd><%= @written_question.tablingMember.name %></dd>
+	<dd><%= link_to person_path(@written_question.tablingMember.id) do %>
+			<%= @written_question.tablingMember.name %>
+		<% end %>
+	</dd>
 	<dt>Asked on</dt>
 	<dd><%= @written_question.date.strftime("%d %B %Y") %></dd>
 	<dt>Text</dt>
@@ -14,7 +20,10 @@
 	<legend>Answer</legend>
 	<dl>
 		<dt>Answered by</dt>
-		<dd><%= @written_question.answer.tablingMember.name %></dd>
+		<dd><%= link_to person_path(@written_question.answer.tablingMember.id) do %>
+				<%= @written_question.answer.tablingMember.name %>
+			<% end %>
+		</dd>
 		<dt>Answered on</dt>
 		<dd><%= @written_question.answer.date.strftime("%d %B %Y") %></dd>
 		<dt>Text</dt>
