Added missing end

--- a/app/views/votes/index_by_division.html.erb
+++ b/app/views/votes/index_by_division.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
 	<% @votes.each do |vote| %>
-		<li><%= vote.member %></li>
+		<li><%= "#{vote.member.name}: #{vote.text}" %></li>
 	<% end %>
 </ul>
