--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -9,6 +9,6 @@
 	<h2>Written questions</h2>
 <% end %>
 
-<%= link_to person_divisions_path(@person.id) do %>
-	<h2>Divisions</h2>
+<%= link_to person_votes_path(@person.id) do %>
+	<h2>Votes</h2>
 <% end %>
