--- a/app/views/concepts/index.html.erb
+++ b/app/views/concepts/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Concepts</h1>
-<h2>TODO order by the sum of total or average contributions per concept</h2>
+<h2>Ranked by number of contributions</h2>
 
 <ul>
 	<% @concepts.each do |concept| %>
