--- a/app/views/votes/index_by_division.html.erb
+++ b/app/views/votes/index_by_division.html.erb
@@ -9,7 +9,7 @@
 						<%= item.person_name %>
 					<% end %>
 				</dt>
-				<dd><%= item.vote_value%></dd>
+				<dd><%= item.vote_value == 'true' ? 'Content' : 'Not content' %></dd>
 			</dl>
 		</li>
 	<% end %>
