--- a/app/views/votes/index_by_person.html.erb
+++ b/app/views/votes/index_by_person.html.erb
@@ -1,15 +1,11 @@
-<h1><%= @data.first.person_name%></h1>
+<h1><%= @person_name %></h1>
 
 <ul>
-	<% @data.each do |item|%>
+	<% @votes.each do |item|%>
 		<li>
 			<dl>
-				<dt>
-					<%= link_to division_path(item.division.to_s.split('/').last) do %>
-						<%= item.division_title %>
-					<% end %>
-				</dt>
-				<dd><%= item.vote_value%></dd>
+				<dt><%= item[:division_title] %></dt>
+				<dd><%= item[:value] %></dd>
 			</dl>
 		</li>
 	<% end %>
