--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,14 +1,20 @@
 <img src="<%= @person.image.to_s %>" align='right'>
 <h1><%= @person.name %></h1>
 
+<ul>
+<li>
 <%= link_to person_oral_questions_path(@person.id) do %>
-	<h2>Oral questions</h2>
+	Oral questions
 <% end %>
-
+</li>
+<li>
 <%= link_to person_written_questions_path(@person.id) do %>
-	<h2>Written questions</h2>
+	Written questions
 <% end %>
-
+</li>
+<li>
 <%= link_to person_votes_path(@person.id) do %>
-	<h2>Votes</h2>
+	Votes
 <% end %>
+</li>
+</ul>
