trying to write query for the counts of contributions about concepts

--- a/app/views/votes/index_by_person.html.erb
+++ b/app/views/votes/index_by_person.html.erb
@@ -4,7 +4,11 @@
 	<% @votes.each do |item|%>
 		<li>
 			<dl>
-				<dt><%= item[:division_title] %></dt>
+				<dt>
+					<%= link_to division_path(item[:division_id]) do %>
+						<%= item[:division_title] %> 
+					<% end %>
+				</dt>
 				<dd><%= item[:value] %></dd>
 			</dl>
 		</li>
