--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -3,8 +3,8 @@
 <ul>
 	<% @houses.each do |house| %>
 		<li>
-			<%= link_to house_path(house.id) do %>
-				<%= house.label %>
+			<%= link_to house_path(house[:id]) do %>
+				<%= house[:label] %>
 			<% end %>
 		</li>
 	<% end %>
