--- a/app/views/oral_questions/show.html.erb
+++ b/app/views/oral_questions/show.html.erb
@@ -1,17 +1,17 @@
 <h1>Oral question details</h1>
 <dl>
 	<dt>House</dt>
-	<dd><%= link_to house_path(@oral_question.house.id) do %>
-			<%= @oral_question.house.label %>
+	<dd><%= link_to house_path(@oral_question[:house][:id]) do %>
+			<%= @oral_question[:house][:label] %>
 		<% end %>
 	</dd>
 	<dt>Asked by</dt>
-	<dd><%= link_to person_path(@oral_question.tablingMember.id) do %>
-			<%= @oral_question.tablingMember.name %>
+	<dd><%= link_to person_path(@oral_question[:member][:id]) do %>
+			<%= @oral_question[:member][:name] %>
 		<% end %>
 	</dd>
 	<dt>Asked on</dt>
-	<dd><%= @oral_question.date.strftime("%d %B %Y") %></dd>
+	<dd><%= @oral_question[:date].strftime("%d %B %Y") %></dd>
 	<dt>Text</dt>
-	<dd><%= strip_tags(@oral_question.text) %></dd>	
+	<dd><%= strip_tags(@oral_question[:text]) %></dd>	
 </dl>
