Refactored oral questions find by house to use construct

--- a/app/views/oral_questions/_oral_questions_list.html.erb
+++ b/app/views/oral_questions/_oral_questions_list.html.erb
@@ -1,5 +1,5 @@
 <ul>
-	<% @oral_questions.each do |oral_question| %>
+	<% @hierarchy[:questions].each do |oral_question| %>
 		<li>
 			<%= link_to oral_question_path(oral_question[:id]) do %>
 				<%= strip_tags(oral_question[:text]) %>
