--- a/app/views/oral_questions/index_by_house.html.erb
+++ b/app/views/oral_questions/index_by_house.html.erb
@@ -1,3 +1,3 @@
-<h1><%= @house.label %> Oral Questions</h1>
+<h1><%= @hierarchy[:house_label] %> Oral Questions</h1>
 
 <%= render "oral_questions_list" %>
