Refactored oral questions find by concept and person

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 	<%= link_to root_path do %>
 		Home
 	<% end %>
-	<fieldset style="position: absolute; right: 0; border: 5px solid; padding: 3px">
+	<fieldset style="position: absolute; right: 0; border: 5px solid; padding: 3px; background-color: white">
 		<legend>Download</legend>
 		<ul>
 			<li>
