--- a/app/views/oral_questions/index_by_concept.html.erb
+++ b/app/views/oral_questions/index_by_concept.html.erb
@@ -1,3 +1,3 @@
-<h1>Oral Questions about <%= @concept.label %></h1>
+<h1>Oral Questions about <%= @hierarchy[:concept_label] %></h1>
 
 <%= render "oral_questions_list" %>
