--- a/app/views/oral_questions/index_by_person.html.erb
+++ b/app/views/oral_questions/index_by_person.html.erb
@@ -1,3 +1,3 @@
-<h1><%= @person.name %> Oral Questions</h1>
+<h1><%= @hierarchy[:person_name] %> Oral Questions</h1>
 
 <%= render "oral_questions_list" %>
