--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -2,9 +2,10 @@
 <ul>
 	<% @people.each do |person| %>
 		<li>
-			<%= link_to person_path(person.id) do %>
-				<%= person.name %>
+			<%= link_to person_path(person[:id]) do %>
+				<%= person[:name] %> (<%= person[:count] %>)
 			<% end %>
 		</li>
 	<% end %>
 </ul>
+
