--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,19 +1,18 @@
-<img src="<%= @person.image.to_s %>" align='right'>
-<h1><%= @person.name %></h1>
+<h1><%= @person[:name] %></h1>
 
 <ul>
 <li>
-<%= link_to person_oral_questions_path(@person.id) do %>
+<%= link_to person_oral_questions_path(@person[:id]) do %>
 	Oral questions
 <% end %>
 </li>
 <li>
-<%= link_to person_written_questions_path(@person.id) do %>
+<%= link_to person_written_questions_path(@person[:id]) do %>
 	Written questions
 <% end %>
 </li>
 <li>
-<%= link_to person_votes_path(@person.id) do %>
+<%= link_to person_votes_path(@person[:id]) do %>
 	Votes
 <% end %>
 </li>
