--- a/app/views/divisions/show.html.erb
+++ b/app/views/divisions/show.html.erb
@@ -1,15 +1,15 @@
-<h1><%= @division.title %></h1>
+<h1><%= @division[:title] %></h1>
 <dl>
 	<dt>House</dt>
 	<dd>
-		<%= link_to house_path(@division.house.id) do %>
-			<%= @division.house.label %>
+		<%= link_to house_path(@division[:house][:id]) do %>
+			<%= @division[:house][:label] %>
 		<% end %>
 	</dd>
 	<dt>Description</dt>
-	<dd><%= strip_tags(@division.description) %></dd>
+	<dd><%= strip_tags(@division[:description]) %></dd>
 
 </dl>
-<%= link_to division_votes_path(@division.id) do %>
+<%= link_to division_votes_path(@division[:id]) do %>
 	Votes
 <% end %>
