--- a/app/views/written_questions/index_by_concept.html.erb
+++ b/app/views/written_questions/index_by_concept.html.erb
@@ -1,3 +1,3 @@
-<h1>Written questions about <%= @concept.label %></h1>
+<h1>Written questions about <%= @hierarchy[:concept_label] %></h1>
 
 <%= render "written_questions_list" %>
