--- a/app/views/written_questions/index_by_house.html.erb
+++ b/app/views/written_questions/index_by_house.html.erb
@@ -1,3 +1,3 @@
-<h1><%= @house.label %> Written Questions</h1>
+<h1><%= @hierarchy[:house_label] %> Written Questions</h1>
 
 <%= render "written_questions_list" %>
