--- a/app/views/written_questions/index_by_person.html.erb
+++ b/app/views/written_questions/index_by_person.html.erb
@@ -1,3 +1,3 @@
-<h1><%= @person.name %> Written Questions</h1>
+<h1><%= @hierarchy[:person_name] %> Written Questions</h1>
 
 <%= render "written_questions_list" %>
