--- a/app/views/written_questions/show.html.erb
+++ b/app/views/written_questions/show.html.erb
@@ -1,32 +1,32 @@
 <h1>Written question details</h1>
 <dl>
 	<dt>House</dt>
-	<dd><%= link_to house_path(@written_question.house.id) do %>
-			<%= @written_question.house.label %>
+	<dd><%= link_to house_path(@written_question[:house][:id]) do %>
+			<%= @written_question[:house][:label] %>
 		<% end %>
 	</dd>
 	<dt>Asked by</dt>
-	<dd><%= link_to person_path(@written_question.tablingMember.id) do %>
-			<%= @written_question.tablingMember.name %>
+	<dd><%= link_to person_path(@written_question[:question_member][:id]) do %>
+			<%= @written_question[:question_member][:name]%>
 		<% end %>
 	</dd>
 	<dt>Asked on</dt>
-	<dd><%= @written_question.date.strftime("%d %B %Y") %></dd>
+	<dd><%= @written_question[:date].strftime("%d %B %Y") %></dd>
 	<dt>Text</dt>
-	<dd><%= @written_question.text %></dd>	
+	<dd><%= @written_question[:text] %></dd>	
 </dl>
 
 <fieldset> 
 	<legend>Answer</legend>
 	<dl>
 		<dt>Answered by</dt>
-		<dd><%= link_to person_path(@written_question.answer.tablingMember.id) do %>
-				<%= @written_question.answer.tablingMember.name %>
+		<dd><%= link_to person_path(@written_question[:answer][:member][:id]) do %>
+				<%= @written_question[:answer][:member][:name] %>
 			<% end %>
 		</dd>
 		<dt>Answered on</dt>
-		<dd><%= @written_question.answer.date.strftime("%d %B %Y") %></dd>
+		<dd><%= @written_question[:answer][:date].strftime("%d %B %Y") %></dd>
 		<dt>Text</dt>
-		<dd><%= strip_tags(@written_question.answer.text) %></dd>
+		<dd><%= strip_tags(@written_question[:answer][:text]) %></dd>
 	</dl>
 </fieldset>
