Refactored votes by person

--- a/app/views/votes/index_by_person.html.erb
+++ b/app/views/votes/index_by_person.html.erb
@@ -1,15 +1,15 @@
-<h1><%= @person_name %></h1>
+<h1><%= @person[:name] %></h1>
 
 <ul>
-	<% @votes.each do |item|%>
+	<% @person[:divisions].each do |division|%>
 		<li>
 			<dl>
 				<dt>
-					<%= link_to division_path(item[:division_id]) do %>
-						<%= item[:division_title] %> 
+					<%= link_to division_path(division[:id]) do %>
+						<%= division[:title] %> 
 					<% end %>
 				</dt>
-				<dd><%= item[:value] %></dd>
+				<dd><%= division[:vote_value] == 'true' ? 'Content' : 'Not content' %></dd>
 			</dl>
 		</li>
 	<% end %>
