--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,19 +1,25 @@
 <h1><%= @person[:name] %></h1>
-
+<dl>
+	<dt>House</dt>
+	<dd><%= link_to house_path(@person[:house][:id]) do %>
+			<%= @person[:house][:label] %>
+		<% end %>
+	</dd>
+</dl>
 <ul>
-<li>
-<%= link_to person_oral_questions_path(@person[:id]) do %>
-	Oral questions
-<% end %>
-</li>
-<li>
-<%= link_to person_written_questions_path(@person[:id]) do %>
-	Written questions
-<% end %>
-</li>
-<li>
-<%= link_to person_votes_path(@person[:id]) do %>
-	Votes
-<% end %>
-</li>
+	<li>
+		<%= link_to person_oral_questions_path(@person[:id]) do %>
+			Oral questions
+		<% end %>
+	</li>
+	<li>
+		<%= link_to person_written_questions_path(@person[:id]) do %>
+			Written questions
+		<% end %>
+	</li>
+	<li>
+		<%= link_to person_votes_path(@person[:id]) do %>
+			Votes
+		<% end %>
+	</li>
 </ul>
