Initial simple search working

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,5 +1,10 @@
 <h1>Sparql Exploration</h1>
 
+<form action="/search">
+	<input type="text" name="q">
+	<button type="submit">Search</button>
+</form>
+
 <ul>
 	<li>
 		<%= link_to houses_path do %>
