finished index_by_person for committees

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -22,4 +22,9 @@
 			Votes
 		<% end %>
 	</li>
+  <li>
+    <%= link_to person_committees_path(@person[:id]) do %>
+        Committees
+    <% end %>
+  </li>
 </ul>
