Added type to results page

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,6 +2,9 @@
 <ul>
 	<% @results.each do |result| %>
 		<li>
+			<strong>
+				<%= result[:friendly_type]%>:
+			</strong>
 			<%= link_to controller:"#{result[:path]}", action: "show", id: result[:id] do %>
 				<%= strip_tags(result[:text]) %>
 			<% end %>
