--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,12 @@
 	<%= link_to root_path do %>
 		Home
 	<% end %>
+
+	<form action="/search">
+		<input type="text" name="q">
+		<button type="submit">Search</button>
+	</form>
+	
 	<fieldset style="position: absolute; right: 0; border: 5px solid; padding: 3px; background-color: white">
 		<legend>Download</legend>
 		<ul>
