--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -6,18 +6,51 @@
   <% end %>
 </p>
 
+<h2><%= @committee[:chairs_count] %> Chairs</h2>
+
 <ul>
-  <% @committee[:members].each do |member|%>
+  <% @committee[:chairships].each do |chairship|%>
       <li>
         <dl>
           <dt>
-            <%= link_to person_path(member[:id]) do %>
-                <%= member[:name] %>
-            <% end %>
+            <%= link_to person_path(chairship[:person][:id]) do %>
+                <%= chairship[:person][:name] %><% end %>
+            (<%= chairship[:start_date].strftime("%D") %>-<%= chairship[:end_date].strftime("%D") %>)
           </dt>
-          <dd><%= member[:role] %></dd>
-          <p>start date :<%= member[:start_date].strftime("%d %B %Y") %></p>
-          <p>end date :<%= member[:end_date].strftime("%d %B %Y") %></p>
+        </dl>
+      </li>
+  <% end %>
+</ul>
+
+<h2><%= @committee[:members_count] %> Members</h2>
+
+<ul>
+  <% @committee[:memberships].each do |membership|%>
+      <li>
+        <dl>
+          <dt>
+            <%= link_to person_path(membership[:person][:id]) do %>
+                <%= membership[:person][:name] %><% end %>
+            (<%= membership[:start_date].strftime("%D") %>-<%= membership[:end_date].strftime("%D") %>)
+          </dt>
+          </dt>
+        </dl>
+      </li>
+  <% end %>
+</ul>
+
+<h2><%= @committee[:advisers_count] %> Advisers</h2>
+
+<ul>
+  <% @committee[:adviserships].each do |advisership|%>
+      <li>
+        <dl>
+          <dt>
+            <%= link_to person_path(advisership[:person][:id]) do %>
+                <%= advisership[:person][:name] %><% end %>
+            (<%= advisership[:start_date].strftime("%D") %>-<%= advisership[:end_date].strftime("%D") %>)
+          </dt>
+          </dt>
         </dl>
       </li>
   <% end %>
