Added extra links to person and division search results. Also truncated the results

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -6,7 +6,16 @@
 				<%= result[:friendly_type]%>:
 			</strong>
 			<%= link_to controller:"#{result[:controller]}", action: "show", id: result[:id] do %>
-				<%= strip_tags(result[:text]) %>
+				<%= truncate(strip_tags(result[:text]), length: 120) %>
+			<% end %>
+			<% if result[:controller] == "people" %>
+				- <%= link_to "Written questions", person_written_questions_path(result[:id]) %>
+				- <%= link_to "Oral questions", person_oral_questions_path(result[:id]) %>
+				- <%= link_to "Voting record", person_votes_path(result[:id]) %>
+				- <%= link_to "Committees", person_committees_path(result[:id]) %>
+			<% end %>
+			<% if result[:controller] == "divisions" %>
+				- <%= link_to "Votes", division_votes_path(result[:id]) %>
 			<% end %>
 		</li>
 	<% end %>
