--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,11 +1,5 @@
 <h1>Most active people based on the number of total contributions</h1>
-<ul>
-	<% @people.each do |person| %>
-		<li>
-			<%= link_to person_path(person[:id]) do %>
-				<%= person[:name] %> (<%= person[:count] %>)
-			<% end %>
-		</li>
-	<% end %>
-</ul>
+
+<%= render "people_list" %>
+
 
