--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -18,6 +18,11 @@
 		<% end %>
 	</li>
 	<li>
+		<%= link_to person_written_answers_path(@person[:id]) do %>
+			Written answers
+		<% end %>
+	</li>
+	<li>
 		<%= link_to person_votes_path(@person[:id]) do %>
 			Votes
 		<% end %>
