Refactored people views to use partials

--- a/app/views/people/_people_list.html.erb
+++ b/app/views/people/_people_list.html.erb
@@ -1,5 +1,5 @@
 <ul>
-	<% @people.each do |person| %>
+	<% @hierarchy[:people].each do |person| %>
 		<li>
 			<%= link_to person_path(person[:id]) do %>
 				<%= person[:name] %> (<%= person[:count] %>)
