--- a/app/views/people/index_by_house.html.erb
+++ b/app/views/people/index_by_house.html.erb
@@ -1,10 +1,3 @@
-<h1>Most active members of the <%= @house[:label] %> based on the number of total contributions</h1>
-<ul>
-	<% @house[:members].each do |member| %>
-		<li>
-			<%= link_to person_path(member[:id]) do %>
-				<%= member[:name] %> (<%= member[:count] %>)
-			<% end %>
-		</li>
-	<% end %>
-</ul>
+<h1>Most active members of the <%= @hierarchy[:house_label] %> based on the number of total contributions</h1>
+
+<%= render "people_list" %>
