Extended filter to cover all types returned in the search results

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,7 +1,15 @@
-<input id="filter1" name="filters[parl:Division]" type="checkbox" <%= "checked" if params[:filters] && params[:filters]["parl:Division"] == "on" %>>
-<label for="filter1">filter1</label>
-<input id="filter2" name="filters[parl:OralParliamentaryQuestion]" type="checkbox" <%= "checked" if params[:filters] && params[:filters]["parl:OralParliamentaryQuestion"] == "on" %>>
-<label for="filter2">filter2</label>
+<input id="Divisions" name="filters[parl:Division]" type="checkbox" <%= "checked" if params[:filters] && params[:filters]["parl:Division"] == "on" %>>
+<label for="Divisions">Divisions</label>
+<input id="Oral Questions" name="filters[parl:OralParliamentaryQuestion]" type="checkbox" <%= "checked" if params[:filters] && params[:filters]["parl:OralParliamentaryQuestion"] == "on" %>>
+<label for="Oral Questions">Oral Questions</label>
+<input id="Written Questions" name="filters[parl:WrittenParliamentaryQuestion]" type="checkbox" <%= "checked" if params[:filters] && params[:filters]["parl:WrittenParliamentaryQuestion"] == "on" %>>
+<label for="Written Questions">Written Questions</label>
+<input id="Written Answers" name="filters[parl:WrittenParliamentaryAnswer]" type="checkbox" <%= "checked" if params[:filters] && params[:filters]["parl:WrittenParliamentaryAnswer"] == "on" %>>
+<label for="Written Answers">Written Answers</label>
+<input id="Committees" name="filters[parl:Committee]" type="checkbox" <%= "checked" if params[:filters] && params[:filters]["parl:Committee"] == "on" %>>
+<label for="Committees">Committees</label>
+<input id="People" name="filters[schema:Person]" type="checkbox" <%= "checked" if params[:filters] && params[:filters]["schema:Person"] == "on" %>>
+<label for="People">People</label>
 
 <h1>Search results</h1>
 
