--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -23,18 +23,13 @@
     <% end %>
   </li>
 	<li>
-		<%= link_to person_written_answers_path(@person[:id]) do %>
-			Written answers
-		<% end %>
-	</li>
-	<li>
 		<%= link_to person_votes_path(@person[:id]) do %>
-			Votes
+			Votes (<%= @person[:vote_count] %>)
 		<% end %>
 	</li>
   <li>
     <%= link_to person_committees_path(@person[:id]) do %>
-        Committees
+        Committees (<%= @person[:membership_count] %>)
     <% end %>
   </li>
 </ul>
