--- a/app/views/committees/index.html.erb
+++ b/app/views/committees/index.html.erb
@@ -1,5 +1,14 @@
 <h1>Committees</h1>
 
+<form action="<%= url_for(search_index_path) %>">
+	<fieldset>
+		<legend>Committee search</legend>
+		<input type="hidden" name="filters[parl:Committee]" value="on">
+		<input name="q">
+		<button>Search</button>
+	</fieldset>
+</form>
+
 <ul>
 	<% @committees.each do |committee| %>
 		<li>
