--- a/app/views/divisions/index_by_concept.html.erb
+++ b/app/views/divisions/index_by_concept.html.erb
@@ -1,3 +1,3 @@
-<h1>Divisions about <%= @concept[:label] %></h1>
+<h1>Divisions about <%= @hierarchy[:concept_label] %></h1>
 
 <%= render "divisions_list" %>
