--- a/app/views/oral_questions/index.html.erb
+++ b/app/views/oral_questions/index.html.erb
@@ -1,3 +1,12 @@
 <h1>Oral questions</h1>
 
+<form action="<%= url_for(search_index_path) %>">
+	<fieldset>
+		<legend>Oral question search</legend>
+		<input type="hidden" name="filters[parl:OralParliamentaryQuestion]" value="on">
+		<input name="q">
+		<button>Search</button>
+	</fieldset>
+</form>
+
 <%= render "oral_questions_list" %>
